@@ -5,14 +5,7 @@ Java-SDK-version: 15.0.2 OR 16 both works fine.
 
 Javafx =16
 
-Add these line in your Intellij configuration:
---module-path /Users/farhat/Downloads/javafx-sdk-16/lib --add-modules javafx.controls,javafx.fxml,,javafx.media
-
-Note:  Please add your javafx folder here -> /Users/farhat/Downloads/javafx-sdk-16/lib
-
-To run the code use the file : Controller.py file.
-
-All functions implementation are mentioned in the "Main.py " file
+Actions:
 
 The Snake Game uses four arrows-key to control the movement or direction of the snake like:
     Up      
